<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <ImageView
        android:layout_width="@dimen/edit_object_dialog_width"
        android:layout_height="5dip"
        android:background="@drawable/dialog_divider_horizonal" />

    <LinearLayout
        android:layout_width="@dimen/edit_object_dialog_width"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <EditText
            android:id="@+id/ase_export_edtLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edittext_content" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/edit_object_dialog_width"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/ase_export_btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ase_export_btnOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>