<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/camera_adjust_background"
    android:splitMotionEvents="true" >

    <TextView
        android:id="@+id/camera_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/camera_adjust_camera_location"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/camera_fov_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/camera_adjust_camera_fov"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/camera_location_title"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/camera_location_x_value"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:background="@drawable/camera_setting_split_line" />

        <TextView
            android:id="@+id/camera_location_y_value"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/camera_setting_split_line" />

        <TextView
            android:id="@+id/camera_location_z_value"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:background="@drawable/camera_setting_split_line" />

        <TextView
            android:id="@+id/camera_fov_value"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/camera_setting_btn_frame"
        android:text="@string/camera_adjust_button_reset"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_reset"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/btn_narrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:clickable="true"
            android:src="@drawable/camera_setting_narrow_btn" />

        <ImageView
            android:id="@+id/btn_expand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/camera_setting_expand_btn" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/camera_setting_split_line" />

        <ImageView
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/camera_setting_up_btn" />

        <ImageView
            android:id="@+id/btn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:clickable="true"
            android:src="@drawable/camera_setting_down_btn" />
    </LinearLayout>

</RelativeLayout>